wayland: don't leak the registry proxy

Release the registry proxy when closing the display.

https://bugzilla.gnome.org/show_bug.cgi?id=748564